5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4272/executions/1601_2425.log
== TEST (2019-03-27 14:27:35) 
-- CODE:
d = input("diatancia:")
c = input("combustivel:")
#consumo medio
m = c*d/2
print(round(m,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    m = c*d/2
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:28:02) 
-- CODE:
d = float(input("diatancia:"))
c = float(input("combustivel:"))
#consumo medio
m = c*d/2
print(round(m,3))
-- OUTPUT:
28.572
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:28:25) 
-- CODE:
d = float(input("diatancia:"))
c = float(input("combustivel:"))
#consumo medio
m = c*d/2
print(round(m,3))
-- EXECUTION TIME:
0.260339
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
28.572
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
140198.8
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
1057894.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:29:12) 
-- CODE:
d = float(input("diatancia:"))
c = float(input("combustivel:"))
#consumo medio
m = c/c
print(round(m,3))
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:29:38) 
-- CODE:
d = float(input("diatancia:"))
c = float(input("combustivel:"))
#consumo medio
m = c/c
print(round(m,3))
-- EXECUTION TIME:
0.108485
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
1.0
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
1.0
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:33:52) 
-- CODE:
d = float(input("distancia em km:"))
c = float(input("combustivel gasto em litros:"))
#consumo medio
m = d/c
print(round(m,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:34:17) 
-- CODE:
d = float(input("distancia em km:"))
c = float(input("combustivel gasto em litros:"))
#consumo medio
m = d/c
print(round(m,3))
-- EXECUTION TIME:
0.224617
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:35:29) 
-- CODE:
d = float(input("distancia em km:"))
c = float(input("combustivel gasto em litros:"))

consumo = d(km)/c(l)
print(round(consumo,3))
-- EXECUTION TIME:
0.140571
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2425/main.py", line 4, in <module>
    consumo = d(km)/c(l)
NameError: name 'km' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:35:29) 
-- CODE:
d = float(input("distancia em km:"))
c = float(input("combustivel gasto em litros:"))

consumo = d(km)/c(l)
print(round(consumo,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    consumo = d(km)/c(l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:36:10) 
-- CODE:
d = float(input("distancia em km:"))
c = float(input("combustivel gasto em litros:"))

consumo = d/c
print(round(consumo,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:36:15) 
-- CODE:
d = float(input("distancia em km:"))
c = float(input("combustivel gasto em litros:"))

consumo = d/c
print(round(consumo,3))
-- EXECUTION TIME:
0.151437
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:36:56) 
-- CODE:
d = float(input("distancia/km:"))
c = float(input("combustivel gasto/l:"))

consumo = d/c
print(round(consumo,3))
-- EXECUTION TIME:
0.179422
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:37:18) 
-- CODE:
d = float(input("distancia*km:"))
c = float(input("combustivel gasto*l:"))

consumo = d/c
print(round(consumo,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:38:15) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel gasto:"))

consumo = d/c
print(round(consumo,"km/l",3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(consumo,"km/l",3))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:38:20) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel gasto:"))

consumo = d/c
print(round(consumo,"km/l",3))
-- EXECUTION TIME:
0.149486
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2425/main.py", line 5, in <module>
    print(round(consumo,"km/l",3))
TypeError: round() takes at most 2 arguments (3 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:39:10) 
-- CODE:
d = float(input("distancia:"))
c = float(input("combustivel gasto:"))

consumo = d/c
print(round(consumo,3), "km/l")
-- EXECUTION TIME:
0.137174
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
